--- a/popup/popup.css
+++ b/popup/popup.css
@@ -1,3 +1,10 @@
+html,
+body {
+    margin: 0;
+    padding: 0;
+    overflow-x: hidden;
+}
+
 body {
     width: 300px;
 }
